RDM-12276 Introduce Jitpack and befta framework